[tool.poetry]
name = "tiny-diffusion"
version = "0.1.0"
description = ""
authors = ["David Brown <davewbrwn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.7.0"
torchvision = "^0.22.0"
matplotlib = "^3.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
